crates/gridded-meta/tests/snapshots/netcdf_snapshots__groups_nc_snapshot.snap
---
source: crates/gridded-meta/tests/netcdf_snapshots.rs
expression: summary
---
{
  "format": "NetCdf",
  "root": {
    "name": "",
    "dims": [
      {
        "name": "time",
        "size": 4,
        "is_unlimited": false
      },
      {
        "name": "x",
        "size": 3,
        "is_unlimited": false
      },
      {
        "name": "y",
        "size": 2,
        "is_unlimited": false
      }
    ],
    "coords": [
      {
        "name": "time",
        "dtype": "int64",
        "dims": [
          "time"
        ],
        "shape": [
          4
        ],
        "attrs": [
          [
            "units",
            "days since 2024-01-01 00:00:00"
          ],
          [
            "calendar",
            "proleptic_gregorian"
          ]
        ],
        "preview": "0 1 2 3"
      },
      {
        "name": "x",
        "dtype": "float32",
        "dims": [
          "x"
        ],
        "shape": [
          3
        ],
        "attrs": [
          [
            "_FillValue",
            null
          ],
          [
            "units",
            "km"
          ],
          [
            "long_name",
            "Cross-shore distance"
          ]
        ],
        "preview": "-10.0 0.0 10.0"
      }
    ],
    "data_vars": [
      {
        "name": "salinity",
        "dtype": "float32",
        "dims": [
          "time",
          "x",
          "y"
        ],
        "shape": [
          4,
          3,
          2
        ],
        "attrs": [
          [
            "_FillValue",
            null
          ],
          [
            "units",
            "psu"
          ],
          [
            "long_name",
            "Sea Water Salinity"
          ]
        ]
      },
      {
        "name": "temperature",
        "dtype": "float32",
        "dims": [
          "time",
          "x",
          "y"
        ],
        "shape": [
          4,
          3,
          2
        ],
        "chunks": [
          2,
          3,
          2
        ],
        "attrs": [
          [
            "_FillValue",
            null
          ],
          [
            "units",
            "degC"
          ],
          [
            "long_name",
            "Sea Water Temperature"
          ]
        ]
      }
    ],
    "attrs": [
      [
        "title",
        "gridded-quicklook simple fixture"
      ],
      [
        "institution",
        "NERACOOS"
      ],
      [
        "conventions",
        "CF-1.8"
      ]
    ],
    "children": [
      {
        "name": "group_a",
        "dims": [],
        "coords": [],
        "data_vars": [
          {
            "name": "temperature",
            "dtype": "float32",
            "dims": [
              "time",
              "x",
              "y"
            ],
            "shape": [
              4,
              3,
              2
            ],
            "attrs": [
              [
                "_FillValue",
                null
              ],
              [
                "units",
                "degC"
              ],
              [
                "long_name",
                "Sea Water Temperature"
              ]
            ]
          }
        ],
        "attrs": [
          [
            "title",
            "gridded-quicklook simple fixture"
          ],
          [
            "institution",
            "NERACOOS"
          ],
          [
            "conventions",
            "CF-1.8"
          ]
        ],
        "children": [
          {
            "name": "nested",
            "dims": [],
            "coords": [],
            "data_vars": [
              {
                "name": "temperature",
                "dtype": "float32",
                "dims": [
                  "time",
                  "x",
                  "y"
                ],
                "shape": [
                  4,
                  3,
                  2
                ],
                "attrs": [
                  [
                    "_FillValue",
                    null
                  ],
                  [
                    "units",
                    "degC"
                  ],
                  [
                    "long_name",
                    "Sea Water Temperature"
                  ]
                ]
              }
            ],
            "attrs": [
              [
                "title",
                "gridded-quicklook simple fixture"
              ],
              [
                "institution",
                "NERACOOS"
              ],
              [
                "conventions",
                "CF-1.8"
              ]
            ],
            "children": []
          }
        ]
      },
      {
        "name": "group_b",
        "dims": [],
        "coords": [],
        "data_vars": [
          {
            "name": "salinity",
            "dtype": "float32",
            "dims": [
              "time",
              "x",
              "y"
            ],
            "shape": [
              4,
              3,
              2
            ],
            "attrs": [
              [
                "_FillValue",
                null
              ],
              [
                "units",
                "psu"
              ],
              [
                "long_name",
                "Sea Water Salinity"
              ]
            ]
          }
        ],
        "attrs": [
          [
            "title",
            "gridded-quicklook simple fixture"
          ],
          [
            "institution",
            "NERACOOS"
          ],
          [
            "conventions",
            "CF-1.8"
          ]
        ],
        "children": []
      }
    ]
  }
}
